@@ -33,6 +33,9 @@ import com.google.common.annotations.VisibleForTesting;
 import com.google.common.collect.Streams;
 import io.airbyte.cdk.integrations.base.AirbyteExceptionHandler;
 import io.airbyte.cdk.integrations.base.JavaBaseConstants;
+import io.airbyte.cdk.integrations.util.ConnectorExceptionUtil;
+import io.airbyte.commons.exceptions.ConfigErrorException;
+import io.airbyte.integrations.base.destination.operation.AbstractStreamOperation;
 import io.airbyte.integrations.base.destination.typing_deduping.AlterTableReport;
 import io.airbyte.integrations.base.destination.typing_deduping.ColumnId;
 import io.airbyte.integrations.base.destination.typing_deduping.DestinationHandler;
@@ -42,8 +45,8 @@ import io.airbyte.integrations.base.destination.typing_deduping.Sql;
 import io.airbyte.integrations.base.destination.typing_deduping.StreamConfig;
 import io.airbyte.integrations.base.destination.typing_deduping.StreamId;
 import io.airbyte.integrations.base.destination.typing_deduping.TableNotMigratedException;
-import io.airbyte.integrations.base.destination.typing_deduping.migrators.MinimumDestinationState;
-import io.airbyte.integrations.base.destination.typing_deduping.migrators.MinimumDestinationState.Impl;
+import io.airbyte.integrations.destination.bigquery.BigQueryUtils;
+import io.airbyte.integrations.destination.bigquery.migrators.BigQueryDestinationState;
 import java.math.BigInteger;
 import java.util.ArrayList;
 import java.util.Collection;
@@ -58,11 +61,11 @@ import java.util.UUID;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.apache.commons.text.StringSubstitutor;
+import org.jetbrains.annotations.NotNull;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-// TODO this stuff almost definitely exists somewhere else in our codebase.
-public class BigQueryDestinationHandler implements DestinationHandler<MinimumDestinationState.Impl> {
+public class BigQueryDestinationHandler implements DestinationHandler<BigQueryDestinationState> {
 
   private static final Logger LOGGER = LoggerFactory.getLogger(BigQueryDestinationHandler.class);
 
@@ -83,22 +86,22 @@ public class BigQueryDestinationHandler implements DestinationHandler<MinimumDes
     return BigInteger.ZERO.equals(bq.getTable(TableId.of(id.getFinalNamespace(), id.getFinalName())).getNumRows());
   }
 
-  public InitialRawTableStatus getInitialRawTableState(final StreamId id) throws Exception {
-    final Table rawTable = bq.getTable(TableId.of(id.getRawNamespace(), id.getRawName()));
+  public InitialRawTableStatus getInitialRawTableState(final StreamId id, final String suffix) throws Exception {
+    final Table rawTable = bq.getTable(TableId.of(id.getRawNamespace(), id.getRawName() + suffix));
     if (rawTable == null) {
       // Table doesn't exist. There are no unprocessed records, and no timestamp.
       return new InitialRawTableStatus(false, false, Optional.empty());
     }
 
     final FieldValue unloadedRecordTimestamp = bq.query(QueryJobConfiguration.newBuilder(new StringSubstitutor(Map.of(
-        "raw_table", id.rawTableId(QUOTE))).replace(
+        "raw_table", id.rawTableId(QUOTE, suffix))).replace(
             // bigquery timestamps have microsecond precision
             """
             SELECT TIMESTAMP_SUB(MIN(_airbyte_extracted_at), INTERVAL 1 MICROSECOND)
             FROM ${raw_table}
             WHERE _airbyte_loaded_at IS NULL
             """))
-        .build()).iterateAll().iterator().next().get(0);
+        .build()).iterateAll().iterator().next().getFirst();
     // If this value is null, then there are no records with null loaded_at.
     // If it's not null, then we can return immediately - we've found some unprocessed records and their
     // timestamp.
@@ -107,12 +110,12 @@ public class BigQueryDestinationHandler implements DestinationHandler<MinimumDes
     }
 
     final FieldValue loadedRecordTimestamp = bq.query(QueryJobConfiguration.newBuilder(new StringSubstitutor(Map.of(
-        "raw_table", id.rawTableId(QUOTE))).replace(
+        "raw_table", id.rawTableId(QUOTE, suffix))).replace(
             """
             SELECT MAX(_airbyte_extracted_at)
             FROM ${raw_table}
             """))
-        .build()).iterateAll().iterator().next().get(0);
+        .build()).iterateAll().iterator().next().getFirst();
     // We know (from the previous query) that all records have been processed by T+D already.
     // So we just need to get the timestamp of the most recent record.
     if (loadedRecordTimestamp.isNull()) {
@@ -192,26 +195,28 @@ public class BigQueryDestinationHandler implements DestinationHandler<MinimumDes
   }
 
   @Override
-  public List<DestinationInitialStatus<Impl>> gatherInitialState(List<StreamConfig> streamConfigs) throws Exception {
-    final List<DestinationInitialStatus<MinimumDestinationState.Impl>> initialStates = new ArrayList<>();
+  public List<DestinationInitialStatus<BigQueryDestinationState>> gatherInitialState(List<StreamConfig> streamConfigs) throws Exception {
+    final List<DestinationInitialStatus<BigQueryDestinationState>> initialStates = new ArrayList<>();
     for (final StreamConfig streamConfig : streamConfigs) {
       final StreamId id = streamConfig.getId();
       final Optional<TableDefinition> finalTable = findExistingTable(id);
-      final InitialRawTableStatus rawTableState = getInitialRawTableState(id);
+      final InitialRawTableStatus rawTableState = getInitialRawTableState(id, "");
+      final InitialRawTableStatus tempRawTableState = getInitialRawTableState(id, AbstractStreamOperation.TMP_TABLE_SUFFIX);
       initialStates.add(new DestinationInitialStatus<>(
           streamConfig,
           finalTable.isPresent(),
           rawTableState,
+          tempRawTableState,
           finalTable.isPresent() && !existingSchemaMatchesStreamConfig(streamConfig, finalTable.get()),
           finalTable.isEmpty() || isFinalTableEmpty(id),
           // Return a default state blob since we don't actually track state.
-          new MinimumDestinationState.Impl(false)));
+          new BigQueryDestinationState(false)));
     }
     return initialStates;
   }
 
   @Override
-  public void commitDestinationStates(Map<StreamId, ? extends MinimumDestinationState.Impl> destinationStates) throws Exception {
+  public void commitDestinationStates(Map<StreamId, ? extends BigQueryDestinationState> destinationStates) throws Exception {
     // Intentionally do nothing. Bigquery doesn't actually support destination states.
   }
 
@@ -319,6 +324,24 @@ public class BigQueryDestinationHandler implements DestinationHandler<MinimumDes
   private static Set<String> getPks(final StreamConfig stream) {
     return stream.getPrimaryKey() != null ? stream.getPrimaryKey().stream().map(ColumnId::getName).collect(Collectors.toSet())
         : Collections.emptySet();
+  }
+
+  @Override
+  public void createNamespaces(@NotNull Set<String> schemas) {
+    schemas.forEach(this::createDataset);
+  }
+
+  private void createDataset(final String dataset) {
+    LOGGER.info("Creating dataset if not present {}", dataset);
+    try {
+      BigQueryUtils.getOrCreateDataset(bq, dataset, datasetLocation);
+    } catch (BigQueryException e) {
+      if (ConnectorExceptionUtil.HTTP_AUTHENTICATION_ERROR_CODES.contains(e.getCode())) {
+        throw new ConfigErrorException(e.getMessage(), e);
+      } else {
+        throw e;
+      }
+    }
   }
 
 }
